Actions
Bug #10019
closedlibsldap: macro expands to multiple statements
Start date:
2018-11-30
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Issue found by gcc 8 build:
../common/ns_reads.c: In function 'get_mapped_filter': ../common/ns_internal.h:217:2: error: macro expands to multiple statements [-Werror=multistatement-macros] if (((err) = calloc(1, sizeof (struct ns_ldap_error))) == NULL) \ ^~ ../common/ns_reads.c:1364:5: note: in expansion of macro 'MKERROR' MKERROR(LOG_WARNING, cookie->errorp, ^~~~~~~ ../common/ns_reads.c:1363:4: note: some parts of macro expansion are not guarded by this 'if' clause if (err) ^~ cc1: all warnings being treated as errors
Updated by Electric Monk over 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit a949e73d2676619263a21aaaaea30669bfcc27a1
commit a949e73d2676619263a21aaaaea30669bfcc27a1 Author: Toomas Soome <tsoome@me.com> Date: 2018-12-05T01:59:04.000Z 10019 libsldap: macro expands to multiple statements Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions